List of user-visible changes of Public Domain Ratfor.

New in 1.0m
-----------
 * The testsuite have been fixed to work also with gfortran version 4.0.
   Previously it didn't work because of a misbehaviour in gfortran-4.0,
   which caused the `STOP' builtin in the compiled programs to be too much
   verbose even when used without arguments.

New in 1.0l
-----------
 * Public Domain Ratfor uses files imported from SteLib (e.g. `maint.mk',
   `GNUmakefile' and `ax_check_cc_flag.m4'). Some related reorganization
   and modifications have been required.

New in 1.0k
-----------
 * The ratfor testsuite, which is composed only of blackbox-style test
   scripts, is now a subpackage, with its own configure script, makefiles,
   auto* auxiliary files etcetera.  It has been moved from the `tests/'
   subdirectory into the `blackbox-tests/' subdirectory.

New in 1.0j
-----------
 * Since Fortran 77 is ubiquitous today, and Fortran 66 almost forgotten,
   Ratfor now output Fortran 77 code, without bothering anymore about
   Fortran 66 compatibility.
 * The `string' directive is no more recognized.  It should be superseded
   by the improved string-handling capabilities of Fortran 77.
 * The handling of the `-o' has been improved; in particular
    - error messages are more detailed;
    - `-o -' sends output to standard output;
    - files are no more unnecessarily overwritten if multiple `-o'
      options are specified (only the last one is honoured).
 * The error messages have been generally improved and made more detailed.
   A prominent example of this improvement is the increased level of
   details in messages about I/O failures, with the explicit indication of
   the failure's reason, e.g. `No such file or directory' or `Permission
   denied'.
 * Now ratfor complains if given more than one non-option arguments,
   instead of silently discarding all the extra arguments.
 * Messages about usage errors involving unknown option or options called