@@ -1,7 +1,14 @@
 # -*- Autoconf -*-
-# Copied from SteLib at 2009-10-04 20:49:22 +0200.  DO NOT EDIT!
+# Copied from SteLib at 2009-10-21 16:26:09 +0200.  DO NOT EDIT!
 # serial 1 ax_check_cc_flag.m4
 
+#
+# Copyright (C) 2009 Lattarini Stefano <stefano.lattarini@gmail.com>
+#
+# Copying and distribution of this file, with or without modification, are
+# permitted in any medium without royalty provided the copyright notice and
+# this notice are preserved.
+#
 
 # _AX4_CHECK_CC_FLAG(FLAG-TO-CHECK,[PROLOGUE],[BODY],
 #                    [ACTION-IF-SUCCESS], [ACTION-IF-FAILURE])
@@ -19,14 +26,14 @@ AC_DEFUN([_AX_CHECK_CC_FLAG],
 # AX_CACHE_CHECK_CC_FLAG(FLAG-TO-CHECK, [PROLOGUE], [BODY], 
 #                        [ACTION-IF-SUCCESS], [ACTION-IF-FAILURE])
 # ----------------------------------------------------------------
-#  This macro check if the C compiler supports the flag FLAG-TO-CHECK.
-#  Execute ACTION-IF-SUCCESS if succesfull, ACTION-IF-FAILURE otherwise.
+#  This macro checks if the C compiler supports the flag FLAG-TO-CHECK.
+#  Execute ACTION-IF-SUCCESS if succesful, ACTION-IF-FAILURE otherwise.
 #  PROLOGUE and BODY are optional, and should be used as in they are
 #  in the AC_LANG_PROGRAM macro.
 #  The check is cached, and the cache variable is named:
 #   `ax_cv_cc_check_flag_FLAG'
-#  where FLAG is obtained normalizing `FLAG-TO-CHECK' (i.e. by substituting
-#  non-alphanumeric characters in FLAG-TO-CHECK with underscores `_').
+#  where FLAG is obtained normalizing `FLAG-TO-CHECK', i.e. by substituting
+#  non-alphanumeric characters in FLAG-TO-CHECK with underscores (`_').
 AC_DEFUN([AX_CACHE_CHECK_CC_FLAG],
     [ax_cc_flag_norm=`echo x"$1" | sed -e 's/^x//' -e 's/[[^A-Za-z0-9_]]/_/g'`
     AC_CACHE_CHECK(
@@ -38,7 +45,7 @@ AC_DEFUN([AX_CACHE_CHECK_CC_FLAG],
             [eval "ax_cv_check_cc_flag_${ax_cc_flag_norm}=no"])])
     
     AS_IF(
-        [eval test \"\$ax_cv_check_cc_flag_${ax4_cc_flag_norm}\" = yes],
+        [eval test \"\$ax_cv_check_cc_flag_${ax_cc_flag_norm}\" = yes],
         [$4],
         [$5])
     AS_UNSET([ax_cc_flag_norm])])
